--- a/views/output.ejs
+++ b/views/output.ejs
@@ -20,13 +20,10 @@
             <p>The weather is currently <%=weatherDescription%> </p>
             <img src=<%=imageUrl%> alt='weatherIcon'>
             <h1>The temperature in <%=query%> is <%=temp%> degrees Celcius.</h1>
-            <form action="/change" method="get" class="lang-form">
-                <button type="submit" class="lang-btn">Hindi</button>
-            </form>
         </div>
 
         <form action="/" method="get">
-            <button type="submit">Back</button>
+            <button type="submit" class="back-btn">Back</button>
         </form>
         
     </body>
