--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,17 +22,19 @@ h1 {
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
     height: 20vh;
 }
 
 form {
-    width: 20vw;
+    justify-content: center;
 }
 
 input[type="text"] {
+    justify-content: center;
+    align-items: center;
     padding: 8px 16px;
     font-size: 1.3rem;
-    width: 100%;
     outline: 4px solid black;
 }
 
@@ -52,7 +54,8 @@ button[type="submit"]:hover {
     font-weight: bold;
 }
 
-.clock-container {
+.clock-container, .date-container {
+    width: 100%;
     margin-top: 2px;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
@@ -68,11 +71,12 @@ h2 {
 }
 
 p {
+    width: fit-content;
+    display: block;
     text-align: center;
     border: 3px solid black;
     margin: 0 auto;
     font-size: 2.5rem;
-    padding: 5px;
-    width: 30%;
+    padding: 5px 10px;
     background-color: #eee;
 }
